--- a/footer.html
+++ b/footer.html
@@ -2,8 +2,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col l12 s12 grey-text text-lighten-4">
-				<div class="center">Product of</div>
-				<div class="center">Smart Energy Project</div>
+				<div class="center">Product for</div>
+				<div class="center">Mitsubishi Electric Cup Project</div>
 			</div>
 		</div>
 	</div>
